# vboard-rs

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml
assets/: io.github.mrqs001.vboard.desktop
src/: app.rs  config.rs  input.rs  layouts.rs  main.rs
