[package]
name = "vboard-rs"
version = "0.1.0"
edition = "2021"
description = "Movable virtual keyboard for Linux built with GTK3 and XDG desktop portal input."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrqs001/vboard-rs"
homepage = "https://github.com/mrqs001/vboard-rs"
keywords = ["keyboard", "gtk", "linux", "portal", "accessibility"]
categories = ["gui"]
publish = false

[dependencies]
anyhow = "1.0"
dirs = "6.0"
eitype = "0.2.0"
gtk = { version = "0.18.2", features = ["v3_24_30"] }
once_cell = "1.21"
